--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 <body>
     <nav class="navBar">
-        <p><i class='bx bxs-calendar'></i>Calendar App</p>
+        <p><i class='bx bxs-calendar'></i>Calendar App</p><br>
+        <p style="font-size: medium; margin-left: 450px;">Double click date to add event!</p>
     </nav>
     <div class="container">
         <header class="header">
@@ -37,14 +38,14 @@
             </ul>
             <ul class="dates"></ul>
         </div>
-        
+
     </div>
 
     <div class="event-container">
-        <p>Date :  <span id="event-date"></span></p>
-        <p>Event name : <span id="event-name"></span></p>
-        <p>Event Description : <span id="event-description"></span></p>
-        <p>Reminder : <span id="event-reminder"></span></p>
+        <p>Date : <span id="event-date" style="text-decoration: underline;"></span></p>
+        <p>Event name : <span id="event-name" style="text-decoration: underline;"></span></p>
+        <p>Event Description : <span id="event-description" style="text-decoration: underline;"></span></p>
+        <p>Reminder : <span id="event-reminder" style="text-decoration: underline;"></span></p>
 
 
     </div>
@@ -54,28 +55,10 @@
             <div id="close">+</div>
             <i class='bx bxs-calendar-event' style="font-size: 40px;"></i>
             <form id="form">
-                <input id="event-input"type="text" placeholder="Enter event" required>
+                <input id="event-input" type="text" placeholder="Enter event" required>
                 <input type="text" id="event-description-input" placeholder="Enter event descrption">
-                <p>Want to set a reminder?</p>
-                <p>Please enter event date</p>
-                <!-- <select id="countdown-month">
-                    <option value=0>Jan</option>
-                    <option value=1>Feb</option>
-                    <option value=2>Mar</option>
-                    <option value=3>Apr</option>
-                    <option value=4>May</option>
-                    <option value=5>Jun</option>
-                    <option value=6>Jul</option>
-                    <option value=7>Aug</option>
-                    <option value=8>Sep</option>
-                    <option value=9>Oct</option>
-                    <option value=10>Nov</option>
-                    <option value=11>Dec</option>
-                </select> -->
-                <input type="number" name="date" id="countdown-date" placeholder="Enter date">
-                <!-- <input type="text" name="month" id="countdown-month" placeholder="Enter month"> -->
-                <input id="submit"type="submit" value="add">
-            
+                <input id="submit" type="submit" value="add">
+
             </form>
         </div>
 
